--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -57,55 +57,15 @@
 \tableofcontents
 \newpage
 \section{引言}
+在现代商业环境中，选址决策是品牌扩张和市场布局过程中至关重要的一环。一个优质的门店位置不仅能够提升品牌曝光度和客流量，还直接影响企业的经济效益和市场竞争力。传统的选址方法主要依赖于专家经验和简单的人口统计分析，存在主观性强、难以量化、适应性差等局限。随着大数据、机器学习和深度学习技术的快速发展，基于数据驱动的选址预测方法逐渐成为学术界和业界关注的热点。
 
-随着移动互联网和位置服务技术的快速发展，基于位置的服务（Location-Based Services, LBS）已成为现代数字生活的重要组成部分。从商户分布分析到用户行为预测，空间位置数据的智能分析对于理解人类活动模式、优化商业布局和提升服务质量具有重要意义。
+本课题聚焦于“商业智能选址预测”，旨在通过分析品牌历史门店的地理分布数据，建立能够预测品牌下一家门店最优选址的模型。具体而言，课题以网格（Grid）为基本地理单元，利用品牌在城市中的历史开店网格序列及每个网格的地理属性特征，挖掘品牌扩张的空间模式和内在偏好。通过对历史数据的建模与学习，预测品牌未来最有可能选址的网格位置，为企业提供科学、量化的决策依据。
 
-传统的空间位置预测方法主要依赖于统计学方法和简单的机器学习算法，这些方法往往难以充分捕获位置序列中的复杂时空依赖关系。近年来，深度学习技术在序列建模方面取得了显著进展，为解决空间位置预测问题提供了新的思路。特别是循环神经网络（RNN）及其变体长短期记忆网络（LSTM）在处理序列数据方面表现出色，能够有效学习时间序列中的长期依赖关系。
+本项目的数据集包含多个品牌的历史门店分布（训练集和测试集），以及覆盖研究区域的网格地理坐标信息。数据已按7:3比例划分为训练集和测试集，网格划分保证了空间分析的精度和一致性。研究区域的经纬度范围明确，便于空间特征的提取和建模。
 
-本项目针对商户品牌的位置预测问题，提出了一种基于深度学习的网格位置预测系统。该系统的核心创新在于构建了一个多模态神经网络模型，该模型不仅考虑了品牌的历史访问网格序列信息，还融合了地理空间坐标特征和兴趣点（Point of Interest, POI）特征。具体而言，系统采用LSTM网络对网格访问序列进行编码，同时使用多层感知机（MLP）分别对空间坐标和POI特征进行编码，最后通过特征融合层将多种信息整合，实现对下一个最可能访问网格位置的准确预测。
+在方法设计上，项目不仅实现了数据预处理、特征增强、模型训练与评估等完整流程，还探索了多种深度学习与空间分析方法，包括序列建模（如RNN、LSTM、Transformer）、空间关系建模（如图神经网络GNN）以及多模态信息融合等。针对品牌门店分布的空间依赖性和数据稀疏性等挑战，项目尝试引入迁移学习等先进技术，以提升模型的泛化能力和预测准确率。
 
-本项目使用PyTorch深度学习框架实现，支持GPU加速训练，并集成了早停机制以防止过拟合。系统采用端到端的训练方式，从原始的品牌位置数据到最终的预测结果，整个流程完全自动化。实验结果表明，该多模态融合方法相比传统方法在预测准确率和平均倒数排名（Mean Reciprocal Rank, MRR）等指标上都有显著提升。
-
-本报告将详细介绍该深度学习位置预测系统的设计思路、模型架构、实现细节以及实验结果分析，为相关领域的研究和应用提供参考。完整的项目代码和数据集可通过GitHub仓库获取：\url{https://github.com/szw0407/DL-project-2025}。
-
-\section{技术背景与相关工作}
-
-\subsection{深度学习在序列建模中的应用}
-长短期记忆网络（LSTM）作为循环神经网络的改进版本，通过引入门控机制有效解决了传统RNN的梯度消失问题。在位置预测任务中，LSTM能够捕获用户或品牌的长期移动模式，为准确预测下一个访问位置提供基础。
-
-\subsection{多模态学习}
-多模态学习旨在整合来自不同源的信息，在位置预测任务中，我们需要同时考虑：
-\begin{itemize}
-    \item \textbf{序列信息}：历史访问的网格ID序列
-    \item \textbf{空间信息}：地理坐标特征
-    \item \textbf{上下文信息}：兴趣点（POI）特征
-\end{itemize}
-
-\subsection{网格化空间表示}
-为了将连续的地理空间离散化，本项目采用网格化表示方法，将研究区域划分为若干个网格单元，每个网格具有唯一的ID和相应的POI特征。
-
-\section{系统架构与技术实现}
-
-\subsection{整体架构}
-本系统采用多模态深度学习架构，主要包含以下几个核心组件：
-\begin{itemize}
-    \item \textbf{序列编码器（SeqEncoder）}：基于LSTM的序列建模模块，用于编码网格访问序列
-    \item \textbf{多层感知机编码器（MLPEncoder）}：用于编码空间坐标和POI特征
-    \item \textbf{特征融合层}：将多种模态特征进行融合
-    \item \textbf{分类器}：输出下一个网格位置的概率分布
-\end{itemize}
-
-\subsection{数据集描述}
-本项目使用的数据集包含品牌商户的地理位置信息，主要特征包括：
-\begin{itemize}
-    \item 品牌名称和类型
-    \item 经纬度坐标序列
-    \item 网格ID序列
-    \item POI（兴趣点）特征
-\end{itemize}
-
-\subsection{模型训练流程}
-系统采用端到端的训练方式，支持早停机制和GPU加速，训练流程完全自动化。
+本课题的研究不仅具有重要的理论意义，也为实际商业选址提供了可行的智能化解决方案。通过本项目的实践，同学们能够深入理解数据驱动的空间决策建模流程，掌握深度学习与空间分析的前沿方法，并积累解决真实复杂问题的宝贵经验。
 
 \appendix
 \section{附录}
