--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -57,40 +57,15 @@
 \tableofcontents
 \newpage
 \section{引言}
+在现代商业环境中，选址决策是品牌扩张和市场布局过程中至关重要的一环。一个优质的门店位置不仅能够提升品牌曝光度和客流量，还直接影响企业的经济效益和市场竞争力。传统的选址方法主要依赖于专家经验和简单的人口统计分析，存在主观性强、难以量化、适应性差等局限。随着大数据、机器学习和深度学习技术的快速发展，基于数据驱动的选址预测方法为选址预测提供更多的思路启发，其能够通过对历史数据的深入分析，挖掘出潜在的空间模式和内在偏好，从而实现更科学、精准、有效的选址决策。
 
-\section{引言}
+本课题聚焦于“商业智能选址预测”，旨在通过分析品牌历史门店的地理分布数据，建立能够预测品牌下一家门店最优选址的模型。具体而言，课题以网格（Grid）为基本地理单元，利用品牌在城市中的历史开店网格序列及每个网格的地理属性特征，挖掘品牌扩张的空间模式和内在偏好。通过对历史数据的建模与学习，预测品牌未来最有可能选址的网格位置，为企业提供科学、量化的决策依据。
 
-在现代商业环境中，选址决策是品牌扩张和市场布局过程中至关重要的一环。一个优质的门店位置不仅能够提升品牌曝光度和客流量，还直接影响企业的经济效益和市场竞争力。根据波士顿咨询集团（BCG）的研究，门店位置因素能够影响实体零售业绩高达30\%至40\%，甚至在某些特定行业中这一数字可能高达70\%。然而，传统的选址方法主要依赖于专家经验和简单的人口统计分析，存在主观性强、难以量化、适应性差等显著局限。
+本项目的数据集包含多个品牌的历史门店分布（训练集和测试集），以及覆盖研究区域的网格地理坐标信息。提供数据已划分为训练集和测试集，网格划分保证了空间分析的精度和一致性。研究区域的经纬度范围明确，便于空间特征的提取和建模。
 
-随着大数据、人工智能技术的迅猛发展，数据驱动的商业智能选址方法正在革新传统商业布局策略。特别是深度学习技术在时空序列分析中的突破性进展，为挖掘品牌扩张的隐含空间逻辑和内在规律提供了强大工具。这种基于数据挖掘和深度学习的智能选址方法，能够融合多源异构数据，捕捉复杂的时空依赖关系，从而实现更科学、精准、有效的选址决策支持。
+在方法设计上，项目不仅实现了数据预处理、特征增强、模型训练与评估等完整流程，还探索了多种深度学习与空间分析方法，包括序列建模（如RNN、LSTM、Transformer）、空间关系建模（如图神经网络GNN）以及多模态信息融合等。针对品牌门店分布的空间依赖性和数据稀疏性等挑战，项目尝试引入迁移学习等先进技术，以提升模型的泛化能力和预测准确率。
 
-\subsection{研究目标与挑战}
-本课题聚焦于"商业智能选址预测"这一前沿领域，旨在通过分析品牌历史门店的地理分布序列数据，构建能够精确预测品牌下一家门店最优选址的智能模型。具体而言，我们以网格（Grid）为基本地理单元，利用品牌在城市中的历史开店网格序列及每个网格的多维度特征，挖掘品牌扩张的时空模式与内在偏好。
-
-该研究面临诸多技术挑战：首先，商业选址数据具有明显的空间异质性和时序依赖性，传统机器学习模型难以有效捕捉；其次，不同品牌的扩张策略和偏好存在显著差异，需要模型具备较强的自适应能力；此外，选址数据往往具有高维稀疏特性，对特征工程和模型设计提出了更高要求。
-
-\subsection{技术路线与创新点}
-为应对上述挑战，本研究采用深度学习为核心的多模态融合建模方法。在系统架构设计上，我们实现了一个端到端的商业选址智能预测框架，包含数据预处理、特征增强、多模态信息融合、深度学习建模与模型评估等完整技术链条。
-
-核心创新点体现在以下几个方面：
-
-1. \textbf{多模态特征融合机制}：模型设计创新性地融合了三类关键信息流：历史选址序列信息（通过LSTM编码）、空间地理特征信息（经MLP编码）以及POI（兴趣点）分布特征（经专用特征提取器），实现了序列依赖性、空间相关性与区域功能属性的有机结合。
-
-2. \textbf{序列感知的空间建模}：针对商业选址的时序演化特性，我们采用了基于LSTM（长短期记忆网络）的序列编码器（\texttt{SeqEncoder}）捕捉品牌扩张的历史轨迹信息，其嵌入维度为32，隐藏层维度为64，有效提取了选址序列的时间依赖性。
-
-3. \textbf{特征工程创新}：针对空间数据的特殊性，引入了密度排序算法（\texttt{sort\_by\_density}）对选址序列进行预处理，通过计算网格间欧氏距离和K近邻聚类特性，更好地表征了商业布局的空间集聚特性。
-
-4. \textbf{高效评估体系}：实现了基于Top-K准确率和MRR（Mean Reciprocal Rank）的多维度评估框架，全面衡量模型在不同精度要求下的性能表现。
-
-\subsection{数据与实现}
-本项目采用包含多个品牌历史选址数据的大规模数据集，其中包括训练数据（\texttt{train\_data.csv}）、测试数据（\texttt{test\_data.csv}）以及网格地理属性数据（\texttt{grid\_coordinates-2.csv}）。数据预处理模块（\texttt{data\_preprocessing.py}）实现了数据加载、特征标准化和序列构建等功能，保证了建模的数据质量。
-
-在模型实现方面，我们构建了基于PyTorch的\texttt{NextGridPredictor}类作为核心预测模型，采用了模块化设计思想，将多模态信息的编码与融合解耦为不同功能模块，提高了系统的可扩展性和维护性。该模型包含三个关键编码器：序列编码器（\texttt{SeqEncoder}）、坐标特征编码器（\texttt{coord\_encoder}）和POI特征编码器（\texttt{poi\_encoder}），通过非线性融合层（\texttt{fusion}）将多模态特征有机整合，最终通过分类器层预测下一个最可能的选址网格。
-
-\subsection{意义与展望}
-本研究不仅在理论上探索了深度学习在空间序列预测中的新应用范式，也为商业实体的选址决策提供了具有实践意义的智能化解决方案。该方法可广泛应用于零售、餐饮、金融服务等多个行业的门店网络规划，助力企业科学制定扩张策略，提升市场竞争力。
-
-未来研究方向将进一步探索图神经网络（GNN）在捕捉空间依赖关系中的应用、注意力机制在多源异构数据融合中的优势，以及迁移学习在应对数据稀疏性挑战中的潜力，不断提升商业智能选址的精度和泛化能力。
+本课题的研究不仅具有重要的理论意义，也为实际商业选址提供了可行的智能化解决方案。
 
 \appendix
 \section{附录}
