--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -4,9 +4,6 @@
 \usepackage{xeCJK}
 \usepackage{indentfirst} % Add indentfirst package for first paragraph indentation
 \setlength{\parindent}{2em} % Set paragraph indentation to 2em
-\setCJKmainfont[BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeBold=true,BoldItalicFont=SimHei]{SimSun} % 设置中文字体为宋体，粗体使用黑体
-\setCJKsansfont[BoldFont=SimHei]{SimHei} % 设置中文无衬线字体为黑体
-\setCJKmonofont[BoldFont=SimHei]{SimSun} % 设置中文等宽字体
 \newCJKfontfamily\heiti[BoldFont=SimHei]{SimHei} % 设置黑体字体命令
 \newCJKfontfamily\kaishu{KaiTi} % 设置楷体字体命令
 \newCJKfontfamily\fangsong{FangSong} % 设置仿宋字体命令
@@ -48,7 +45,7 @@
 \maketitle
 
 \begin{abstract}
-      TODO: 稍后补充
+      % TODO: 稍后补充
 \end{abstract}
 
 \newpage
@@ -65,7 +62,107 @@
 
 在方法设计上，项目不仅实现了数据预处理、特征增强、模型训练与评估等完整流程，还探索了多种深度学习与空间分析方法，包括序列建模（如RNN、LSTM、Transformer）、空间关系建模（如图神经网络GNN）以及多模态信息融合等。针对品牌门店分布的空间依赖性和数据稀疏性等挑战，项目尝试引入迁移学习等先进技术，以提升模型的泛化能力和预测准确率。
 
-本课题的研究不仅具有重要的理论意义，也为实际商业选址提供了可行的智能化解决方案。
+\section{相关工作}
+
+项目提供多种基线（Baseline）模型或方法，包括简单模型和深度模型。传统的随机猜测（Random guess）方法将所有未出现过的网格作为候选集，随机选取若干作为预测结果，作为最简单的基线。随着空间数据挖掘的发展，基于Word2vec的嵌入方法被引入到选址任务中。该方法通过skip-gram模型训练每个网格的embedding，测试时将品牌历史网格序列的embedding取平均，计算与候选网格embedding的相似度（如点积、余弦相似度等），并据此排序预测结果。
+
+深度学习方法方面，LSTM+MLP结构利用嵌入层将输入网格序列编码为向量，随后通过LSTM捕捉序列中的时序依赖，最后通过多层感知机（MLP）进行分类预测。Transformer+MLP则用Transformer替代LSTM，利用自注意力机制更好地建模序列中各网格之间的复杂关系。进一步地，基于注意力融合和对比学习的方法，通过对输入序列进行self-attention，获得全局语义表达，并采用InfoNCE损失进行正负样本的对比训练，有效提升了模型的判别能力和泛化性能。
+
+上述方法在本项目数据集上的实验结果如表所示。可以看出，深度学习模型（如Transformer+MLP、对比学习方法）在准确率和平均排序等指标上均优于传统方法，尤其是对比学习方法在acc@1和acc@10等指标上表现突出，显示了其在空间选址预测任务中的潜力。此外，模型结构的层级设计（如嵌入层、序列建模层、融合层和输出层）对最终性能有显著影响，合理的结构选择和层级组合能够更好地捕捉空间和序列特征，从而提升预测效果。
+
+% TODO：这部分内容后面重写
+
+\section{方法探索}
+
+\subsection{数据预处理}
+
+在商业选址预测任务中，原始数据通常包含品牌历史门店的网格ID序列、网格地理坐标以及兴趣点(POI)特征等多种异构信息。为了使这些数据能够有效地用于深度学习模型训练，我们设计了一套完整的数据预处理流程。
+
+\subsubsection{网格信息加载与归一化}
+
+首先，我们从网格坐标文件中提取每个网格的地理信息，包括经纬度坐标和10种类型的POI特征（医疗、住宿、摩托、体育、餐饮、公司、购物、生活、科教、汽车）。为了消除不同特征间的尺度差异，我们对坐标和POI特征分别进行归一化处理：
+
+对于坐标特征，我们计算网格的中心点坐标，然后将其归一化到[0,1]区间：
+\begin{equation}
+x_{norm} = \frac{x - x_{min}}{x_{max} - x_{min} + \epsilon}
+\end{equation}
+
+对于POI特征，我们同样采用最小-最大归一化方法，确保不同类型POI特征的数值在同一尺度上。
+
+\subsubsection{基于密度的序列排序}
+
+考虑到商业扩张通常遵循"从高密度区域向外扩展"的规律，我们设计了基于密度的序列排序算法。该算法通过计算每个网格到其K个最近邻网格的平均距离来衡量密度，距离越小表示密度越大：
+
+\begin{equation}
+density\_score_i = \frac{1}{K}\sum_{j=1}^{K} d(grid_i, neighbor_j)
+\end{equation}
+
+其中$d(grid_i, neighbor_j)$表示网格$i$到其第$j$个最近邻的欧氏距离。通过这种排序方式，我们能够构建符合商业扩张规律的序列，提高模型的学习效果。
+
+\subsubsection{滑动窗口样本生成}
+
+为了最大化利用有限的训练数据，我们采用滑动窗口方法从每个品牌的店铺序列中生成多个训练样本。例如，对于序列[A,B,C,D]，我们生成以下样本：
+\begin{itemize}
+\item 已有[A]，预测B
+\item 已有[A,B]，预测C  
+\item 已有[A,B,C]，预测D
+\end{itemize}
+
+这种处理方法不仅增加了训练样本数量，还使模型能够学习不同长度序列的预测模式，更好地模拟品牌实际扩张过程中的决策链。
+
+% TODO: 用户可在此补充更多数据预处理的尝试和优化
+
+\subsection{对于标签的处理尝试}
+
+% TODO: 用户可在此补充对标签处理的具体尝试，如类别不平衡处理、标签平滑等
+
+\subsection{数据增强和特征增强}
+
+% TODO: 用户可在此补充数据增强的具体方法，如噪声注入、序列扰动、特征工程等
+
+\subsection{多模态特征融合设计}
+
+针对商业选址预测任务的特点，我们设计了一个多模态融合的神经网络架构，该架构能够同时处理和融合三种不同类型的信息：
+
+\subsubsection{序列特征编码}
+历史选址序列包含了品牌扩张的时序信息和空间模式。我们使用嵌入层将网格ID映射到低维向量空间，然后通过LSTM网络捕获序列中的时序依赖关系：
+
+\begin{equation}
+h_t = LSTM(embed(grid\_id_t), h_{t-1})
+\end{equation}
+
+LSTM的长短期记忆特性使其能够有效学习品牌在不同时期的选址偏好变化。
+
+\subsubsection{空间特征编码}
+地理坐标信息反映了选址的空间连续性。我们通过多层感知机(MLP)对归一化后的坐标特征进行编码，提取空间分布模式。
+
+\subsubsection{环境特征编码}
+POI特征反映了网格周边的商业环境和设施分布。同样使用MLP对POI特征向量进行编码，捕获环境因素对选址决策的影响。
+
+\subsubsection{特征融合策略}
+我们采用特征拼接的方式将三种编码后的特征向量组合，然后通过多层融合网络进一步提取联合特征：
+
+\begin{equation}
+f_{fused} = MLP_{fusion}(concat(f_{seq}, f_{coord}, f_{poi}))
+\end{equation}
+
+最终通过线性分类器预测下一个网格的概率分布。
+
+\subsection{模型最终设计}
+
+考虑到数据集中特征的特点，模型采用时序的方案进行建模。整体架构采用多模态融合设计，具体包括：
+
+\begin{itemize}
+\item \textbf{序列编码器}：基于嵌入层和LSTM的序列特征提取
+\item \textbf{空间编码器}：基于MLP的坐标特征编码
+\item \textbf{环境编码器}：基于MLP的POI特征编码  
+\item \textbf{融合网络}：多层感知机进行特征融合
+\item \textbf{分类器}：线性层输出概率分布
+\end{itemize}
+
+该设计充分考虑了商业选址的多因素特性，通过端到端的学习方式自动发现不同模态特征间的内在关联，为精准的选址预测提供了有力支撑。
+
+% TODO: 用户可在此补充模型设计的其他尝试，如不同架构的对比、超参数调优等
 
 \appendix
 \section{附录}
