--- a/report paper/codestyle.sty
+++ b/report paper/codestyle.sty
@@ -5,12 +5,27 @@
 % 设置代码显示样式
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{fontspec} % 添加字体支持
 
 % 定义颜色
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+% 设置支持Unicode字符的等宽字体（带后备字体）
+\IfFontExistsTF{Consolas}{
+        \setmonofont{Consolas}[
+            Ligatures=TeX,
+            Scale=0.85
+        ]
+    }{
+        \setmonofont{Courier New}[
+            Ligatures=TeX,
+            Scale=0.85
+        ]
+    }
+
 
 % Python代码样式
 \lstdefinestyle{pythonstyle}{
@@ -35,7 +50,13 @@
     framexleftmargin=3mm,
     framexrightmargin=3mm,
     framextopmargin=3mm,
-    framexbottommargin=3mm
+    framexbottommargin=3mm,
+    extendedchars=true,
+    inputencoding=utf8,
+    literate={┌}{{\texttt{+}}}1 {─}{{\texttt{-}}}1 {┐}{{\texttt{+}}}1 
+             {│}{{\texttt{|}}}1 {└}{{\texttt{+}}}1 {┘}{{\texttt{+}}}1
+             {▼}{{\texttt{v}}}1 {→}{{\texttt{>}}}1 {←}{{\texttt{<}}}1
+             {↑}{{\texttt{\^{}}}}1 {↓}{{\texttt{v}}}1
 }
 
 % CSV数据样式
@@ -52,7 +73,9 @@
     framexleftmargin=3mm,
     framexrightmargin=3mm,
     framextopmargin=3mm,
-    framexbottommargin=3mm
+    framexbottommargin=3mm,
+    extendedchars=true,
+    inputencoding=utf8
 }
 
 \lstset{style=pythonstyle}
