--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -2,10 +2,22 @@
 
 % 中文支持设置
 \usepackage{xeCJK}
+\usepackage{fontspec} % 添加字体支持
 \usepackage{indentfirst} % Add indentfirst package for first paragraph indentation
 \setlength{\parindent}{2em} % Set paragraph indentation to 2em
+
+% 设置西文字体
+\setmainfont{Times New Roman} % 设置西文主字体为Times New Roman（衬线体）
+\setsansfont{Arial} % 设置西文无衬线字体为Arial
+\setmonofont{Consolas}[Scale=0.85] % 设置等宽字体，支持Unicode字符
+
+% 设置中文字体
+\setCJKmainfont{SimSun} % 设置正文字体为宋体（衬线体）
+\setCJKsansfont{SimHei} % 设置无衬线字体为黑体（用于标题）
+\setCJKmonofont{FangSong} % 设置等宽字体为仿宋
+\newCJKfontfamily\songti{SimSun} % 设置宋体字体命令
 \newCJKfontfamily\heiti[BoldFont=SimHei]{SimHei} % 设置黑体字体命令
-\newCJKfontfamily\kaishu{KaiTi} % 设置楷体字体命令
+\newCJKfontfamily\kaishu{KaiTi} % 设置楷体字体命令（用于斜体替代）
 \newCJKfontfamily\fangsong{FangSong} % 设置仿宋字体命令
 \newCJKfontfamily\lishu{LiShu} % 设置隶书字体命令
 
@@ -21,7 +33,7 @@
 \usepackage{booktabs}
 \usepackage{xcolor}
 \usepackage{colortbl}
-\usepackage[colorlinks=true, allcolors=blue, unicode]{hyperref} % 添加 unicode 选项
+\usepackage[unicode]{hyperref}
 \usepackage{listings}
 \usepackage{float} % 添加 float 宏包
 \usepackage{keywords} % 引入关键词环境定义
@@ -45,9 +57,9 @@
 \maketitle
 
 \begin{abstract}
-      % TODO: 稍后补充
+本项目旨在介绍商业智能选址预测的深度学习方法。通过分析品牌历史门店的地理分布数据，建立能够预测品牌下一家门店最优选址的模型。项目以网格（Grid）为基本地理单元，利用品牌在城市中的历史开店网格序列及每个网格的地理属性特征，挖掘品牌扩张的空间模式和内在偏好。通过对历史数据的建模与学习，预测品牌未来最有可能选址的网格位置。模型由序列编码器、空间编码器和环境编码器组成，采用多模态融合设计。实验结果表明，该模型在选址预测任务中表现优异，能够为商业决策提供科学依据。
 \end{abstract}
-
+\keywords{选址预测, 深度学习, 网格模型, 多模态融合, 序列编码器, 空间编码器, 环境编码器}
 \newpage
 % 目录
 
@@ -60,11 +72,13 @@
 
 本项目的数据集包含多个品牌的历史门店分布（训练集和测试集），以及覆盖研究区域的网格地理坐标信息。提供数据已划分为训练集和测试集，网格划分保证了空间分析的精度和一致性。研究区域的经纬度范围明确，便于空间特征的提取和建模。
 
-在方法设计上，项目不仅实现了数据预处理、特征增强、模型训练与评估等完整流程，还探索了多种深度学习与空间分析方法，包括序列建模（如RNN、LSTM、Transformer）、空间关系建模（如图神经网络GNN）以及多模态信息融合等。针对品牌门店分布的空间依赖性和数据稀疏性等挑战，项目尝试引入迁移学习等先进技术，以提升模型的泛化能力和预测准确率。
-
 \section{相关工作}
 
-项目提供多种基线（Baseline）模型或方法，包括简单模型和深度模型。传统的随机猜测（Random guess）方法将所有未出现过的网格作为候选集，随机选取若干作为预测结果，作为最简单的基线。随着空间数据挖掘的发展，基于Word2vec的嵌入方法被引入到选址任务中。该方法通过skip-gram模型训练每个网格的embedding，测试时将品牌历史网格序列的embedding取平均，计算与候选网格embedding的相似度（如点积、余弦相似度等），并据此排序预测结果。
+项目提供了多种基线（Baseline）模型或方法，包括简单模型和深度模型。在项目文档中，对比了多个基线方案的实验结果，展示了不同方法在选址预测任务中的表现，作为模型实现方案的参考和对比。
+
+随机猜测（Random guess）方法，将所有未出现过的网格作为候选集，随机选取若干作为预测结果，作为最简单的基线\cite{Dietterich1998Approximate}。一般认为，一个模型至少有一点作用，就可以将它和随机猜测进行对比，如果这个模型居然结果还不如随机猜测，那么这个模型就没有意义了，一定存在很明显的缺陷，比如严重的过拟合、特征选择不当、数据标签出现错误、数据分布出现重大偏差等\cite{Domingos2012MLthingstoknow}。
+
+随着空间数据挖掘的发展，基于Word2vec的嵌入方法被用到选址任务中\cite{word2vec}。这种方法，虽然最初被用于自然语言处理，但是其本质是一种时序性的序列预测方法\cite{mohan_link_2021}，因此也可以被利用在这个任务中。该方法通过skip-gram模型训练每个网格的embedding，测试时将品牌历史网格序列的embedding取平均，计算与候选网格embedding的相似度（如点积、余弦相似度等），并据此排序预测结果。
 
 深度学习方法方面，LSTM+MLP结构利用嵌入层将输入网格序列编码为向量，随后通过LSTM捕捉序列中的时序依赖，最后通过多层感知机（MLP）进行分类预测。Transformer+MLP则用Transformer替代LSTM，利用自注意力机制更好地建模序列中各网格之间的复杂关系。进一步地，基于注意力融合和对比学习的方法，通过对输入序列进行self-attention，获得全局语义表达，并采用InfoNCE损失进行正负样本的对比训练，有效提升了模型的判别能力和泛化性能。
 
@@ -76,18 +90,65 @@
 
 \subsection{数据预处理}
 
-在商业选址预测任务中，原始数据通常包含品牌历史门店的网格ID序列、网格地理坐标以及兴趣点(POI)特征等多种异构信息。为了使这些数据能够有效地用于深度学习模型训练，我们设计了一套完整的数据预处理流程。
+数据集中有已经分配好的训练集和测试集。数据的内容主要是品牌历史门店的选址信息。具体分析数据结构如表\ref{tab:dataset_fields}所示。
 
-\subsubsection{网格信息加载与归一化}
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+\rowcolor[HTML]{D9EAD3}
+\textbf{字段} & \textbf{类型} & \textbf{描述} \\ \hline
+brand\_name & string & 品牌名称 \\ \hline
+brand\_type & string(csv) & 品牌类型（如餐饮、零售等） \\ \hline
+longtitude\_list & list(float) & 网格经度列表 \\ \hline
+latitude\_list & list(float) & 网格纬度列表 \\ \hline
+grid\_id\_list & list(int) & 网格ID列表 \\ \hline
+\end{tabular}
+\caption{数据集字段说明}
+\label{tab:dataset_fields}
+\end{table}
 
-首先，我们从网格坐标文件中提取每个网格的地理信息，包括经纬度坐标和10种类型的POI特征（医疗、住宿、摩托、体育、餐饮、公司、购物、生活、科教、汽车）。为了消除不同特征间的尺度差异，我们对坐标和POI特征分别进行归一化处理：
+
+此外还通过了网格数据，给出对应网格ID在真实地理世界中的经纬度坐标。网格数据的结构如表\ref{tab:grid_fields}所示。
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+\rowcolor[HTML]{D9EAD3}
+\textbf{字段} & \textbf{类型} & \textbf{描述} \\ \hline
+grid\_id & int & 网格ID \\ \hline
+grind\_lon\_min & float & 网格左下角经度 \\ \hline
+grind\_lon\_max & float & 网格右上角经度 \\ \hline
+grind\_lat\_min & float & 网格左下角纬度 \\ \hline
+grind\_lat\_max & float & 网格右上角纬度 \\ \hline
+\end{tabular}
+\caption{网格数据字段说明}
+\label{tab:grid_fields}
+\end{table}
+
+\subsubsection{数据加载}
+
+数据加载是数据预处理的第一步。我们需要从提供的训练集和测试集文件中读取品牌历史门店的选址信息，并将其转换为适合模型输入的格式，提交给神经网络。
+
+\subsubsection{网格信息加载}
+
+“坐标”含有的信息过于的稀少，难以直接被模型“理解”，从而掌握其中内在的一些联系。需要对数据增加有关的信息，以扩展其表达能力，否则模型表达能力的上限就会受到限制\cite{Shalev-Shwartz2014UnderstandingML}。为了得出更加合理的结论，必须在数据预处理阶段强化并且增加特征。
+
+网格（Grid）是商业选址预测任务中的基本地理单元。在原始数据集里，每个网格由其唯一的网格ID和对应的地理坐标（经纬度）组成。这个体现了网格在空间上的位置信息。但是这个信息并不能很有效地描述网格的全部特性。为了增强网格的信息，需要从数据集中重新挖掘出可能存在的信息。兴趣点（POI, Point of Interest）是地理信息系统（GIS）和位置服务中非常核心的概念，它指的是地图上具有特定意义或吸引力的地点。它代表一个具有空间位置和语义信息的地理目标，比如餐厅、医院、公交站、商场、景点等，在经纬度以外，其还通常包括有名称、地址、类别等信息，并经常以向量的形式表示。POI 可以将三维世界中的复杂实体抽象为一个零维点，从而便于管理、分析和计算\cite{psyllidis_points_2022}。
+
+因此，可以从全部的门店数据中，统计每个网格的相关信息，再将其关联到网格ID上，构成更加立体、具有丰富特征的高维网格对象。具体而言，再项目实现上，从网格坐标文件中提取每个网格的地理信息，包括经纬度坐标和10种类型的POI特征（医疗、住宿、摩托、体育、餐饮、公司、购物、生活、科教、汽车）。这种类型的统计信息，虽然引入了一些和其他若干特征高度相关的特征，但是会在大型复杂模型的训练上甚至有性能提升的作用\cite{Heaton_2016}。
+
+\subsubsection{特征归一化}
+
+为了消除不同特征间的尺度差异，我们对坐标和POI特征分别进行归一化处理：
 
 对于坐标特征，我们计算网格的中心点坐标，然后将其归一化到[0,1]区间：
 \begin{equation}
 x_{norm} = \frac{x - x_{min}}{x_{max} - x_{min} + \epsilon}
 \end{equation}
 
-对于POI特征，我们同样采用最小-最大归一化方法，确保不同类型POI特征的数值在同一尺度上。
+对于POI特征，我们同样采用归一化方法，确保不同类型POI特征的数值在同一尺度上。
 
 \subsubsection{基于密度的序列排序}
 
@@ -164,6 +225,9 @@ f_{fused} = MLP_{fusion}(concat(f_{seq}, f_{coord}, f_{poi}))
 
 % TODO: 用户可在此补充模型设计的其他尝试，如不同架构的对比、超参数调优等
 
+\bibliographystyle{IEEEtran}
+\bibliography{sample}
+
 \appendix
 \section{附录}
 
@@ -217,6 +281,6 @@ f_{fused} = MLP_{fusion}(concat(f_{seq}, f_{coord}, f_{poi}))
     \item \texttt{data/grid\_coordinates-2.csv} - 网格坐标映射
 \end{itemize}
 
-详细的代码实现和更多技术细节请参考GitHub仓库：\url{https://github.com/szw0407/DL-project-2025}
+详细的代码实现请参考GitHub仓库：\url{https://github.com/szw0407/DL-project-2025}
 
 \end{document}
