--- a/report paper/sample.bib
+++ b/report paper/sample.bib
@@ -94,3 +94,40 @@
   author       = {Mohan, Anuraj and Pramod, K. V.},
   date         = {2021-02-01}
 }
+
+@misc{vaswani_attention_2023,
+  title      = {Attention Is All You Need},
+  url        = {http://arxiv.org/abs/1706.03762},
+  doi        = {10.48550/arXiv.1706.03762},
+  abstract   = {The dominant sequence transduction models are based on complex recurrent or convolutional neural networks in an encoder-decoder configuration. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 {BLEU} on the {WMT} 2014 English-to-German translation task, improving over the existing best results, including ensembles by over 2 {BLEU}. On the {WMT} 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art {BLEU} score of 41.8 after training for 3.5 days on eight {GPUs}, a small fraction of the training costs of the best models from the literature. We show that the Transformer generalizes well to other tasks by applying it successfully to English constituency parsing both with large and limited training data.},
+  number     = {{arXiv}:1706.03762},
+  publisher  = {{arXiv}},
+  author     = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+  urldate    = {2025-02-05},
+  date       = {2023-08-02},
+  eprinttype = {arxiv},
+  eprint     = {1706.03762 [cs]},
+  keywords   = {Computer Science - Computation and Language, Computer Science - Machine Learning},
+}
+@article{hochreiter_long_1997,
+  author   = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+  journal  = {Neural Computation},
+  title    = {Long Short-Term Memory},
+  year     = {1997},
+  volume   = {9},
+  number   = {8},
+  pages    = {1735-1780},
+  keywords = {},
+  doi      = {10.1162/neco.1997.9.8.1735}
+}
+
+@article{menon_empirical_2020,
+  title    = {Empirical Analysis of {CBOW} and Skip Gram {NLP} Models},
+  url      = {https://www.academia.edu/69492807/Empirical_Analysis_of_CBOW_and_Skip_Gram_NLP_Models},
+  doi      = {10.15760/HONORS.956},
+  abstract = {Empirical Analysis of {CBOW} and Skip Gram {NLP} Models},
+  author   = {Menon, Tejas},
+  urldate  = {2025-07-05},
+  date     = {2020-01-01},
+  file     = {全文:C\:\\Users\\vson\\Zotero\\storage\\GSI6P7YR\\Menon - 2020 - Empirical Analysis of CBOW and Skip Gram NLP Models.pdf:application/pdf;Snapshot:C\:\\Users\\vson\\Zotero\\storage\\KNPB4KWN\\Empirical_Analysis_of_CBOW_and_Skip_Gram_NLP_Models.html:text/html}
+}
